--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,1 +1,17 @@
 /* Add CSS Styling */
+
+.click-me {
+  background-color: black;
+  color: white;
+}
+
+.no-click {
+  background-color: yellow;
+
+}
+
+.click-me,
+.no-click {
+  font-size: 28px;
+  font-family: Helvetica, 'Times New Roman', sans-serif;
+}
